Tab overview switcher mode doesn't allow toggling the searchbar with Ctrl+F
As tested with the current Epiphany Technology Preview, if you do Ctrl+F
from within the Ctrl+Shift+O
overview mode, nothing happens.
I know that you can also search by just typing random strings into the ether without turning on the searchbar, but that's not visually discoverable nor intuitive to many users. It would be good to also allow the standard Ctrl+F
(and maybe even F3
, as a secondary) shortcut to also work as a way to explicitly toggle the overview's searchbar. Other apps (Nautilus, GNOME Calendar, etc.) allow this too.