tab-overview: Activate and focus search entry with Ctrl+F

Closes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/714